phase-1: remove non-phase-1 code

--- a/index.html
+++ b/index.html
@@ -15,21 +15,16 @@
             <div class="logo">matt sloper</div>
             <img id="hamburger" src="static/images/hamburger-menu-white.svg" alt="Open mobile menu">
             <nav>
-                <img id="close-mobile-nav" class="close-mobile-nav" src="static/images/close-white.svg" alt="close menu">
+                <img id="close-mobile-nav" class="close-mobile-nav" src="static/images/close-white.svg" alt="Close mobile menu">
                 <ul class="primary-nav-links">
                     <li><a href="index.html">home</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">resume</a></li>
-                    <li><a href="#">projects</a></li>
-                    <li><a href="#">showcase</a></li>
-                    <li><a href="#">contact</a></li>
                 </ul>
             </nav>
         </header>
 
         <section id="hero" class="hero">
             <div class="animation-container"></div>
-  
+
            <div class="hero-text">
                 <div class="qualities">
                     <ul>
@@ -58,11 +53,6 @@
                 <div class="secondary-cta">
                     <a href="resume.html">check out my resume</a>
                 </div>
-            </div>
-
-            <div class="scroll-indicator">
-                <span></span>
-                <span></span>
             </div>
         
         </section>
