baseline layout for mobile only

--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MJS</title>
-    <link rel="stylesheet" href="static/css/style.css">
+
+    <!--  Preconnect to google fonts origin. -->
+    <link rel="preconnect" href="fonts.googleapis.com" crossorigin />
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100,200;300;400;700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100,200;300;400;700&display=swap" media="print" onload="this.media='all'" />
+    <noscript>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100,200;300;400;700&display=swap" />
+    </noscript>
+
+    <link rel="stylesheet" href="static/css/style2.css">
+
 </head>
 <body>
 
-    <div id="page1" class="page">
+    <div id="home" class="page">
 
         <header>
             <div class="logo">matt sloper</div>
@@ -38,7 +48,7 @@
                 <div class="title">
                     <hr class="light-beam-horiz" />
                     <h1 class="title-1">institutional trading systems developer</h1>
-                    <hr class="light-beam-horiz spacer" />
+                    <hr class="light-beam-horiz margin-top-3" />
                     <h1 class="title-2">designer &amp full stack web developer</h1>
                 </div>
  
@@ -48,10 +58,13 @@
             </div>
             <div class="cta">
                 <div class="primary-cta">
-                    <a href="contact.html">get in touch</a>
+                    <a href="#contact.html">get in touch</a>
                 </div>
                 <div class="secondary-cta">
                     <a href="resume.html">check out my resume</a>
+                </div>
+                <div class="email">Reach me at: 
+                    <span>matthew_sloper@hotmail.com</span>
                 </div>
             </div>
         
