fix home link href

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav>
                 <img id="close-mobile-menu" src="static/images/close-white.svg"  alt="Close Mobile Menu">
                 <ul>
-                    <li><a href="mjs.html">home</a></li>
+                    <li><a href="index.html">home</a></li>
                     <li class="hidden"><a href="#">about</a></li>
                     <li class="hidden"><a href="#">resume</a></li>
                     <li class="hidden"><a href="#">contact</a></li>
